# SATwi

./: .env.example  .gitignore  README.md  pyproject.toml  queryParameters.json  targetList.txt
.github/workflows/: dailyUpdate.yml
notebook/: bulk_get_tweets.ipynb
script/: dailyUpdate.py  get_public_data_on_twitter.py  lib.py
